Revise summary and job descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
   <main class="main">
 
     <div class="summary-block">
-      <p>Eight years recruiting engineers at AWS, Meta, and C Spire gave me a clear picture of what good engineering looks like and what teams actually need. Now I'm building that work myself — completing Full Stack and AI Engineering certifications in 2026, with real shipped projects to show for it. Looking for a team where I can contribute from day one.</p>
+      <p>Previous Technical Recruiter, Incoming Software Engineer. Pleased to meet ya.</p>
     </div>
 
     <!-- PROJECTS -->
@@ -475,7 +475,7 @@
         <div class="project-card">
           <div class="project-title">GitHub Repositories</div>
           <span class="project-url">github.com/margaretnorthup</span>
-          <div class="project-desc">Active work in React, JavaScript, and Python updated as I build through the curriculum. Public by default — you can see exactly what I'm working on and how I'm progressing.</div>
+          <div class="project-desc">Active work in React, JavaScript, and Python updated as I create.</div>
         </div>
       </div>
     </section>
@@ -490,8 +490,8 @@
             <div class="job-title">Technical Recruiter</div>
             <div class="job-company">SLAY Recruiting · Franklin, TN</div>
             <ul class="job-bullets">
-              <li>Placed frontend, backend &amp; full-stack engineers across contract and permanent roles for software, media, and marketing clients</li>
-              <li>Ran full search cycles using ATS platforms and Boolean search; managed multiple client relationships with consistent fill rates</li>
+              <li>Places frontend, backend &amp; full-stack engineers across contract and permanent roles for software, media, and marketing clients.</li>
+              <li>Full cycle search using Boolean search; placing candidates for B2B hiring needs.</li>
             </ul>
           </div>
         </div>
@@ -502,9 +502,9 @@
             <div class="job-title">Technical Sourcing Recruiter</div>
             <div class="job-company">Amazon Web Services (AWS) · Herndon, VA</div>
             <ul class="job-bullets">
-              <li>Converted from contractor to full-time within months based on results; held the highest candidate acceptance rate throughout tenure</li>
-              <li>Built an Outlook–ATS integration that cut manual tracking work for the team — wrote the requirements, coordinated the build</li>
-              <li>Covered senior SDE, SDM, TPM &amp; data science roles, working directly with hiring managers from kickoff to offer</li>
+              <li>Converted from contractor to full-time; accolade for highest candidate message acceptance rate.</li>
+              <li>Created an Outlook–ATS integration that eliminated manual tracking and improved the candidate experience.</li>
+              <li>Recruited senior SDE, SDM, TPM &amp; data science roles, working directly with hiring managers from kickoff to offer.</li>
             </ul>
           </div>
         </div>
@@ -515,7 +515,7 @@
             <div class="job-title">Sourcing Recruiter</div>
             <div class="job-company">Meta · Menlo Park, CA</div>
             <ul class="job-bullets">
-              <li>Sourced Data Center Architects for infrastructure expansion — niche, high-competition roles in a saturated market</li>
+              <li>Sourced Data Center Architects for infrastructure expansion — niche, high-competition roles in a saturated market.</li>
             </ul>
           </div>
         </div>
@@ -526,7 +526,7 @@
             <div class="job-title">Senior Technical Recruiter</div>
             <div class="job-company">C Spire · Ridgeland, MS</div>
             <ul class="job-bullets">
-              <li>Filled software engineering roles across four application teams; recorded the fastest time-to-hire in team history</li>
+              <li>Filled software engineering roles across four application teams; From intake meeting to job offer, placed engineering candidates before SLA and improved communication between teams.</li>
             </ul>
           </div>
         </div>
